--- a/wp-multi-step-checkout/changelog.txt
+++ b/wp-multi-step-checkout/changelog.txt
@@ -1,5 +1,22 @@
 == Changelog ==
 
+= 2.26 2023-10-16 =
+* Fix: open the Login step when clicking the "Please log in" link in the "Account already registered" message
+* Feature: option to place the input fields from the Delivery & Pickup Time Date plugin in a separate step
+
+= 2.25 2023-06-24 =
+* Compatibility with the Mollie Payments plugin
+
+= 2.24 2023-05-19 =
+* Fix: missing "next/previous" button with the Elementor Pro checkout widget
+* Fix: the Payment section was missing on the Blocksy theme, when the payment is in a separate step
+* Fix: use the "default" checkout layout type from the Astra Addon Pro plugin 
+* Compatibility with the WooCommerce "Custom Order Tables" feature
+
+= 2.23 2023-02-03 =
+* Fix: add the "woocommerce_checkout_before_order_review" action hook
+* Compatibility with the Fastland theme.
+
 = 2.22 2022-05-10 =
 * Fix: add a "clear: both" element between the step tabs and the validation error messages, so they don't optically overlap
 * Fix: the Shipping section was missing on the Blocksy theme
